# QuantLib

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SHA256SUMS.txt  SUPPORT.md
cmake/: QuantLibConfig.cmake.in  README.md
cmake/scripts/: bench.bat  bench.sh  build.bat  build.sh  checksums.bat  checksums.sh  ci-matrix.bat  ci-matrix.sh  coverage.sh  deploy-check.bat  deploy-check.sh  fuzz-smoke.sh  package-check.bat  package-check.sh  perf-check.sh  release-check.bat  release-check.sh  sbom.bat  sbom.sh  sign-release.bat  sign-release.sh  test.bat  test.sh
data/: README.md
docs/: ALERTS.md  ALGORITHMS.md  API-FREEZE.md  API-REFERENCE.md  ARCHITECTURE.md  AUDIT-PACKAGE.md  AUDIT.md  BATCH.md  BENCHMARKS.md  BUILD-GPU.md  BUILD-LINUX.md  BUILD-PQ.md  BUILD-WINDOWS.md  BUILD.md  BUILD_REPORT.md  CHANGELOG.md  CHANNEL.md  CI.md  DEPLOYMENT.md  DOCS-INDEX.md  EASY.md  FINAL-CHECKLIST.md  FUZZING.md  GETTING-STARTED.md  GPU-BATCH.md  GPU-OPENCL.md  GPU.md  HARDWARE.md  INTEGRATION-RULES.md  KDF.md  KEY-FORMATS.md  MEMORY.md  OPERATIONS.md  POLICY.md  PQ-COMPLETE.md  PQ-PRODUCTION.md  PQ-PROVIDERS.md  PRODUCTION-BASELINE.md  PRODUCTION-HARDENING.md  PRODUCTION-READINESS.md  (+48 more)
docs/experimental/: README.md
docs/experimental/custom-optimizations/: README.md
docs/experimental/pq/: README.md
include/quantlib/: aead.hpp  aligned.hpp  audit.hpp  batch.hpp  bytes.hpp  channel.hpp  cpu.hpp  easy.hpp  gpu.hpp  hardware.hpp  hash.hpp  hybrid.hpp  kdf.hpp  kem.hpp  key.hpp  ops.hpp  policy.hpp  pq.hpp  production.hpp  protocol.hpp  provider.hpp  quantlib.hpp  record.hpp  release.hpp  replay.hpp  result.hpp  rng.hpp  secure.hpp  selftest.hpp  session.hpp  sign.hpp  simd.hpp  ssm.hpp  testing.hpp  throughput.hpp  transcript.hpp  vault.hpp
src/aead/: aead.cpp
src/classical/: classical.cpp
src/core/: bytes.cpp  result.cpp  secure.cpp
src/facade/: easy.cpp
src/gpu/: gpu.cpp
src/hash/: hash.cpp  sha256.cpp
src/hybrid/: hybrid-kem.cpp  hybrid-sign.cpp
src/kdf/: hkdf.cpp
src/key/: encoding.cpp  key.cpp
src/pq/: ml-dsa.cpp  ml-kem.cpp  pq.cpp  slh-dsa.cpp
src/protocol/: channel.cpp  protocol.cpp  record.cpp  replay.cpp  session.cpp  transcript.cpp
src/providers/: registry.cpp
src/rng/: rng.cpp
src/runtime/: batch.cpp  hardware.cpp  ops.cpp  production.cpp  release.cpp  selftest.cpp  testing.cpp  throughput.cpp
src/security/: audit.cpp  policy.cpp  ssm.cpp  vault.cpp
src/simd/: aligned.cpp  cpu.cpp  simd.cpp
src/tools/: inspect.cpp  keygen.cpp  ssm.cpp
tests/: test-audit.cpp  test-batch.cpp  test-channel.cpp  test-classical.cpp  test-core.cpp  test-easy.cpp  test-gpu.cpp  test-hardware.cpp  test-hash.cpp  test-hybrid.cpp  test-kdf.cpp  test-key.cpp  test-ops.cpp  test-policy.cpp  test-pq.cpp  test-production.cpp  test-protocol.cpp  test-provider.cpp  test-record.cpp  test-release.cpp  test-replay.cpp  test-selftest.cpp  test-session.cpp  test-simd.cpp  test-ssm-session.cpp  test-ssm.cpp  test-testing.cpp  test-throughput.cpp  test-transcript.cpp  test-vault.cpp
tests/benchmarks/: bench.cpp
tests/examples/: create-vault.cpp  easy-wrapper.cpp  sign-message.cpp
tests/fuzz/: protocol-limits.cpp  record-decode.cpp
